--- a/src/components/Header/index.scss
+++ b/src/components/Header/index.scss
@@ -58,6 +58,15 @@ header {
             //     src: font("Blackstand"), url("../../font/Blackstand.woff") format("woff");
             // }
         }
+        .logo-boutique {
+            font-family: "Cinzel", serif;
+            font-size: 15px;
+            text-align: end;
+            display:flex;
+            align-items: flex-start;
+            justify-content: flex-end;
+        }
+        
         color: var(--color-blue-default, white);
     }
 
@@ -81,13 +90,10 @@ header {
         }
     }
 }
-
-
-.logo-boutique {
-    font-family: "Cinzel", serif;
-    font-size: 15px;
-    text-align: end;
+.welcome {
+    font-size: 12px;
 }
+
 
 .btn {
     border-radius: 20px;
