--- a/src/App.scss
+++ b/src/App.scss
@@ -25,6 +25,12 @@
         }
     }
 }
+
+@include bp(mobile) {
+	.page-container {
+		max-width: 100vw;
+	}
+}
 .category-filter{
 	display:flex;
 	align-items: center;
