--- a/src/components/ProductCard/index.scss
+++ b/src/components/ProductCard/index.scss
@@ -8,7 +8,7 @@
 //     overflow       : hidden;
 // }
 .one-fourth {
-    max-width: 25%;
+    width: 25%;
     display: flex;
     flex-shrink: shrink;
     flex-wrap: wrap;
@@ -96,7 +96,7 @@
     display:flex;
     /*да минават на нов ред*/
     flex-wrap:wrap;
-    margin: 30px auto; /*30 отгоре и отдолу и то да е центрирано по средата*/
+    margin: 10px auto; /*30 отгоре и отдолу и то да е центрирано по средата*/
    justify-content: center;
 }
 .card {
