--- a/src/components/ShopPage/index.scss
+++ b/src/components/ShopPage/index.scss
@@ -3,23 +3,19 @@
         @media (min-width: 1200px) {
             @content;
         }
-    }
-    @else if $point==desktop {
+    } @else if $point==desktop {
         @media (min-width: 992px) {
             @content;
         }
-    }
-    @else if $point==tablet {
+    } @else if $point==tablet {
         @media (min-width: 768px) {
             @content;
         }
-    }
-    @else if $point==mobile {
+    } @else if $point==mobile {
         @media (max-width: 767.9px) {
             @content;
         }
-    }
-    @else if $point==phone {
+    } @else if $point==phone {
         @media (max-width: 650px) {
             @content;
         }
@@ -27,40 +23,96 @@
 }
 @include bp(mobile) {
     .category-filter {
-        display:flex;
-    flex-flow: column wrap;
-    align-items: center;
+        display: flex;
+        flex-flow: column wrap;
+        align-items: center;
     }
 }
 
-    @include bp(mobile) {
-        .layout-flex {
-        display:flex;
+@include bp(mobile) {
+    .layout-flex {
+        display: flex;
         flex-flow: column wrap;
         align-items: center;
         justify-content: space-between;
         .one-fourth {
-            width: 50%;
-            max-width: 50%;
+            width: 60%;
+            max-width: 60%;
             display: flex;
-            .product-inner{
-                width:100%;
+            .product-inner {
+                width: 100%;
                 max-width: 100%;
             }
-            .product-image{
-                width:100%;
+            .product-image {
+                width: 100%;
             }
         }
-      
+
         .page-container {
             max-width: 100%;
             margin: 0 auto;
-            position:relative;
-            // 
+            position: relative;
+            //
         }
         // .home-image {
         //     max-width: 60%;
         //     height: 50%;
         // }
     }
+   
+}
+.card-container-shop{
+    width:100%;
+}
+.product-inner{
+    width:100%;
+    height:100%;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-between;
+
+    .product-info{
+        display:flex;
+        flex-direction: column;
+        justify-content: center;
+   
     }
+    .product-bar {
+        display:flex;
+        align-items: flex-end;
+        justify-content: flex-end;
+     
+    }
+  
+}
+.category-filter{
+    display:flex;
+    justify-content: space-around;
+    flex: 1 0 auto;
+}
+
+    .filter {
+        width:100%;
+        display:flex;
+        align-items: center;
+        justify-content: center;
+    }
+    .sort-filter{
+        margin-right: 30px;
+    }
+//   .shop-container{
+//       width:100%;
+//     display: flex;
+//     flex-flow: column wrap;
+//     align-items: center;
+ 
+//   }
+.search {
+    display:flex;
+     flex-direction: row;
+    justify-content: space-between;
+    align-items: center
+}
+.search input {
+    width: 350px;
+}
